--- a/templates/base.html
+++ b/templates/base.html
@@ -7,11 +7,13 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    {% load static %}
 
+    <link rel="stylesheet" type="text/css" href="{% static 'polls/style.css' %}">
     <title>{% block title%} {% endblock%}</title>
   </head>
   <body>
-      <div class="container">
+      <div class="container my-main">
         {% block content%} {% endblock%}
     </div>
     <!-- Optional JavaScript -->
